# agentic-system-with-distributed-mcp-servers

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  app.py  docker-compose.yml  dockerfile  gradio_app.py  main.py  pyproject.toml  requirements.txt  run_program_agent.py  test_langsmith.py  tools.py
.github/workflows/: agent_test.yml  agent_tests.yml  mcp_tests.yml
agents/agent_name/: state.py
agents/budgeting_agent/: graph.py  nodes.py  prompts.py  state.py
agents/finance_agent/: __init__.py  graph.py  nodes.py  prompts.py  router.py  state.py
agents/geolocation_agent/: __init__.py  graph.py  nodes.py  prompts.py  router.py  state.py
agents/geoscout_agent/: __init__.py  graph.py  nodes.py  prompts.py  router.py  state.py
agents/planner_agent/: __init__.py  graph.py  nodes.py  prompts.py  router.py  state.py
agents/program_agent/: __init__.py  (+5 more)
config/: database.env.example  docker.env.example
mcp/: client.py
mcp_integration/: README.md  tools.py
mcp_kit/: README.md  adapter.py  tools.py
mcp_servers/: README.md  __init__.py  adapter.py
mcp_services/: Dockerfile  client.py
scripts/: run-tests.sh  start-supabase-mcp-server.sh
tests/: conftest.py  test_langsmith.py  test_location_client_direct.py  test_location_transit.py  test_mcp_client.py  test_mcp_server.py  test_mcp_setup.py  test_planner_agent.py  test_program_agent.py  test_tools.py  test_vector_query.py
utilities/: __init__.py  helpers.py
utils/: convenience.py  embedder.py  ny_programs.json  token_tracking.py
web_server/: css.txt  gr_interface.py  server.py
(+21 files in other folders)
