[project]
name = "civic-assistant-team-5"
version = "0.1.0"
description = ""
authors = [
    {name = "Carlos Huaccho",email = "huaccho.carlos0612@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastmcp (>=2.12.3,<3.0.0)",
    "langchain-openai (>=0.3.33,<0.4.0)",
    "mcp (>=1.14.0,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "ruff (>=0.13.0,<0.14.0)",
    "langgraph (>=0.6.7,<0.7.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "langchain-mcp-adapters (>=0.1.9,<0.2.0)",
    "rich (>=14.1.0,<15.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
